fixed import thing in main5, added a past earthquake layer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
   <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css">
   <script src="https://js.arcgis.com/4.29"></script>
-  <script src="main5.js"></script>
+  <script type="module" src="main5.js"></script>
 </head>
 <body>
   <div id="viewDiv"></div>
