--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   </style>
   <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css">
   <script src="https://js.arcgis.com/4.29"></script>
-  <script type="module" src="main5.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
   <div id="viewDiv"></div>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
