--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <style>
     
   </style>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css">
-  <script src="https://js.arcgis.com/4.29"></script>
-  <script type="module" src="main.js"></script>
+  <!-- <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css"> -->
+  <!-- <script src="https://js.arcgis.com/4.29"></script> -->
+  <!-- <script type="module" src="main.js"></script> -->
 </head>
 <body>
-  <div id="viewDiv"></div>
-  <script type="module" src="/src/main.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
